--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
 python:
 - '2.7'
+services:
+  - elasticsearch
 install: pip install -r requirements.txt
+before_script:
+  - sleep 10
 script: python -m unittest discover
 notifications:
   slack:
