--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ addons:
     packages:
     - oracle-java8-set-default
 before_install:
-- curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.1.1.deb
-- sudo dpkg -i --force-confnew elasticsearch-5.1.1.deb
+- curl -O https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/2.4.1/elasticsearch-2.4.1.deb
+- sudo dpkg -i --force-confnew elasticsearch-2.4.1.deb
 - sudo service elasticsearch start
 install: pip install -r requirements.txt
 before_script:
