--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-elasticsearch>=5.0.0
-elasticsearch-dsl>=5.0.0
+elasticsearch>=2.0.0,<3.0.0
+elasticsearch-dsl>=2.0.0,<3.0.0
 jsonpath-rw>=1.4.0
 jsonpath-rw-ext>=1.0.0
 requests
