--- a/config/basic/zone_field_mappings.json
+++ b/config/basic/zone_field_mappings.json
@@ -1,42 +1,103 @@
 {
-	"1":["extractors.content_strict.text.result.value",
-		"extractors.content_relaxed.text.result.value",
-		"fields.age.strict.name","fields.age.relaxed.name",
-        "fields.age.strict.search","fields.age.relaxed.search",
-        "fields.city.strict.name","fields.city.relaxed.name",
-        "fields.city.strict.search","fields.city.relaxed.search",
-        "fields.country.strict.name","fields.country.relaxed.name",
-        "fields.country.strict.search","fields.country.relaxed.search",
-        "fields.description.strict.name","fields.description.relaxed.name",
-        "fields.description.strict.search","fields.description.relaxed.search",
-        "fields.email.strict.name","fields.email.relaxed.name",
-        "fields.email.strict.search","fields.email.relaxed.search",
-        "fields.ethnicity.strict.name","fields.ethnicity.relaxed.name",
-        "fields.ethnicity.strict.search","fields.ethnicity.relaxed.search",
-        "fields.eye-color.strict.name","fields.eye-color.relaxed.name",
-        "fields.eye-color.strict.search","fields.eye-color.relaxed.search",
-        "fields.hair-color.strict.name","fields.hair-color.relaxed.name",
-        "fields.hair-color.strict.search","fields.hair-color.relaxed.search",
-        "fields.height.strict.name","fields.height.relaxed.name",
-        "fields.height.strict.search","fields.height.relaxed.search",
-        "fields.location.strict.name","fields.location.relaxed.name",
-        "fields.location.strict.search","fields.location.relaxed.search",
-        "fields.name.strict.name","fields.name.relaxed.name",
-        "fields.name.strict.search","fields.name.relaxed.search",
-        "fields.phone.strict.name","fields.phone.relaxed.name",
-        "fields.phone.strict.search","fields.phone.relaxed.search",
-        "fields.posting-date.strict.name","fields.posting-date.relaxed.name",
-        "fields.posting-date.strict.search","fields.posting-date.relaxed.search",
-        "fields.price.strict.name","fields.price.relaxed.name",
-        "fields.price.strict.search","fields.price.relaxed.search",
-        "fields.state.strict.name","fields.state.relaxed.name",
-        "fields.state.strict.search","fields.state.relaxed.search",
-        "fields.title.strict.name","fields.title.relaxed.name",
-        "fields.title.strict.search","fields.title.relaxed.search",
-        "fields.weight.strict.name","fields.weight.relaxed.name",
-        "fields.weight.strict.search","fields.weight.relaxed.search",
-        "fields.tld.strict.name","fields.tld.relaxed.name",
-        "fields.tld.strict.search","fields.tld.relaxed.search",
-        "fields.url.strict.name","fields.url.relaxed.name",
-        "fields.url.strict.search","fields.url.relaxed.search"]
+  "1": [
+    "extractors.content_strict.text.result.value",
+    "extractors.content_relaxed.text.result.value",
+    "fields.address.strict.name",
+    "fields.address.relaxed.name",
+    "fields.address.strict.search",
+    "fields.address.relaxed.search",
+    "fields.age.strict.name",
+    "fields.age.relaxed.name",
+    "fields.age.strict.search",
+    "fields.age.relaxed.search",
+    "fields.city.strict.name",
+    "fields.city.relaxed.name",
+    "fields.city.strict.search",
+    "fields.city.relaxed.search",
+    "fields.country.strict.name",
+    "fields.country.relaxed.name",
+    "fields.country.strict.search",
+    "fields.country.relaxed.search",
+    "fields.description.strict.name",
+    "fields.description.relaxed.name",
+    "fields.description.strict.search",
+    "fields.description.relaxed.search",
+    "fields.email.strict.name",
+    "fields.email.relaxed.name",
+    "fields.email.strict.search",
+    "fields.email.relaxed.search",
+    "fields.ethnicity.strict.name",
+    "fields.ethnicity.relaxed.name",
+    "fields.ethnicity.strict.search",
+    "fields.ethnicity.relaxed.search",
+    "fields.eye_color.strict.name",
+    "fields.eye_color.relaxed.name",
+    "fields.eye_color.strict.search",
+    "fields.eye_color.relaxed.search",
+    "fields.gender.strict.name",
+    "fields.gender.relaxed.name",
+    "fields.gender.strict.search",
+    "fields.gender.relaxed.search",
+    "fields.hair_color.strict.name",
+    "fields.hair_color.relaxed.name",
+    "fields.hair_color.strict.search",
+    "fields.hair_color.relaxed.search",
+    "fields.height.strict.name",
+    "fields.height.relaxed.name",
+    "fields.height.strict.search",
+    "fields.height.relaxed.search",
+    "fields.location.strict.name",
+    "fields.location.relaxed.name",
+    "fields.location.strict.search",
+    "fields.location.relaxed.search",
+    "fields.name.strict.name",
+    "fields.name.relaxed.name",
+    "fields.name.strict.search",
+    "fields.name.relaxed.search",
+    "fields.phone.strict.name",
+    "fields.phone.relaxed.name",
+    "fields.phone.strict.search",
+    "fields.phone.relaxed.search",
+    "fields.posting_date.strict.name",
+    "fields.posting_date.relaxed.name",
+    "fields.posting_date.strict.search",
+    "fields.posting_date.relaxed.search",
+    "fields.price.strict.name",
+    "fields.price.relaxed.name",
+    "fields.price.strict.search",
+    "fields.price.relaxed.search",
+    "fields.review_id.strict.name",
+    "fields.review_id.relaxed.name",
+    "fields.review_id.strict.search",
+    "fields.review_id.relaxed.search",
+    "fields.service.strict.name",
+    "fields.service.relaxed.name",
+    "fields.service.strict.search",
+    "fields.service.relaxed.search",
+    "fields.social_media_id.strict.name",
+    "fields.social_media_id.relaxed.name",
+    "fields.social_media_id.strict.search",
+    "fields.social_media_id.relaxed.search",
+    "fields.state.strict.name",
+    "fields.state.relaxed.name",
+    "fields.state.strict.search",
+    "fields.state.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.relaxed.name",
+    "fields.title.strict.search",
+    "fields.title.relaxed.search",
+    "fields.weight.strict.name",
+    "fields.weight.relaxed.name",
+    "fields.weight.strict.search",
+    "fields.weight.relaxed.search",
+    "fields.tld.strict.name",
+    "fields.tld.relaxed.name",
+    "fields.tld.strict.search",
+    "fields.tld.relaxed.search",
+    "fields.url.strict.name",
+    "fields.url.relaxed.name",
+    "fields.url.strict.search",
+    "fields.url.relaxed.search",
+    "tld"
+  ]
 }
