--- a/config/basic/type_field_mappings.json
+++ b/config/basic/type_field_mappings.json
@@ -51,7 +51,9 @@
     "fields.email.strict.name",
     "fields.email.relaxed.name",
     "fields.email.strict.search",
-    "fields.email.relaxed.search"
+    "fields.email.relaxed.search",
+    "fields.email.strict.key",
+    "fields.email.relaxed.key"
   ],
   "Ethnicity": [
     "fields.ethnicity.strict.name",
@@ -126,10 +128,8 @@
     "fields.phone.relaxed.search"
   ],
   "PostingDate": [
-    "fields.posting_date.strict.name",
-    "fields.posting_date.relaxed.name",
-    "fields.posting_date.strict.search",
-    "fields.posting_date.relaxed.search"
+    "fields.posting_date.strict.key",
+    "fields.posting_date.relaxed.key"
   ],
   "Price": [
     "fields.price.strict.name",
@@ -190,17 +190,12 @@
     "fields.weight.relaxed.search"
   ],
   "TopLevelDomain": [
-    "fields.tld.strict.name",
-    "fields.tld.relaxed.name",
-    "fields.tld.strict.search",
-    "fields.tld.relaxed.search",
+    "tld.raw",
     "tld"
   ],
   "URL": [
-    "fields.url.strict.name",
-    "fields.url.relaxed.name",
-    "fields.url.strict.search",
-    "fields.url.relaxed.search",
+    "url",
+    "url.raw",
     "tld"
   ]
 }
