--- a/config/basic/type_field_mappings.json
+++ b/config/basic/type_field_mappings.json
@@ -1,5 +1,10 @@
 {
   "owl:Thing": [
+    "fields.title.strict.name",
+    "fields.title.relaxed.name",
+    "fields.title.strict.search",
+    "fields.title.relaxed.search",
+    "fields.description.relaxed.name",
     "fields.description.strict.name",
     "fields.description.relaxed.name",
     "fields.description.strict.search",
@@ -10,6 +15,8 @@
     "fields.address.relaxed.name",
     "fields.address.strict.search",
     "fields.address.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
     "fields.description.relaxed.name",
     "fields.description.strict.search",
@@ -19,29 +26,33 @@
     "fields.age.strict.name",
     "fields.age.relaxed.name",
     "fields.age.strict.search",
-    "fields.age.relaxed.search"
+    "fields.age.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search"
   ],
   "City": [
     "fields.city.strict.name",
     "fields.city.relaxed.name",
     "fields.city.strict.search",
-    "fields.city.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Country": [
     "fields.country.strict.name",
     "fields.country.relaxed.name",
     "fields.country.strict.search",
-    "fields.country.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Description": [
+    "fields.title.strict.name",
+    "fields.title.relaxed.name",
+    "fields.title.strict.search",
+    "fields.title.relaxed.search",
     "fields.description.strict.name",
     "fields.description.relaxed.name",
     "fields.description.strict.search",
@@ -51,49 +62,46 @@
     "fields.email.strict.name",
     "fields.email.relaxed.name",
     "fields.email.strict.search",
-    "fields.email.relaxed.search",
     "fields.email.strict.key",
-    "fields.email.relaxed.key"
+    "fields.email.relaxed.key",
+    "fields.title.strict.name",
+    "fields.title.strict.search"
   ],
   "Ethnicity": [
     "fields.ethnicity.strict.name",
     "fields.ethnicity.relaxed.name",
     "fields.ethnicity.strict.search",
-    "fields.ethnicity.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "EyeColor": [
     "fields.eye_color.strict.name",
     "fields.eye_color.relaxed.name",
     "fields.eye_color.strict.search",
-    "fields.eye_color.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Gender":[
     "fields.gender.strict.name",
     "fields.gender.relaxed.name",
     "fields.gender.strict.search",
-    "fields.gender.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "HairColor": [
     "fields.hair_color.strict.name",
     "fields.hair_color.relaxed.name",
     "fields.hair_color.strict.search",
-    "fields.hair_color.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Height": [
     "fields.height.strict.name",
@@ -105,11 +113,10 @@
     "fields.location.strict.name",
     "fields.location.relaxed.name",
     "fields.location.strict.search",
-    "fields.location.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Name": [
     "fields.name.strict.name",
@@ -125,7 +132,8 @@
     "fields.phone.strict.name",
     "fields.phone.relaxed.name",
     "fields.phone.strict.search",
-    "fields.phone.relaxed.search"
+    "fields.description.strict.name",
+    "fields.description.strict.search"
   ],
   "PostingDate": [
     "fields.posting_date.strict.key",
@@ -137,15 +145,14 @@
     "fields.price.strict.search",
     "fields.price.relaxed.search"
   ],
-  "ReviewID":[
+  "ReviewId":[
     "fields.review_id.strict.name",
     "fields.review_id.relaxed.name",
     "fields.review_id.strict.search",
-    "fields.review_id.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Service":[
     "fields.service.strict.name",
@@ -161,7 +168,6 @@
     "fields.social_media_id.strict.name",
     "fields.social_media_id.relaxed.name",
     "fields.social_media_id.strict.search",
-    "fields.social_media_id.relaxed.search",
     "fields.description.strict.name",
     "fields.description.relaxed.name",
     "fields.description.strict.search",
@@ -171,11 +177,10 @@
     "fields.state.strict.name",
     "fields.state.relaxed.name",
     "fields.state.strict.search",
-    "fields.state.relaxed.search",
+    "fields.title.strict.name",
+    "fields.title.strict.search",
     "fields.description.strict.name",
-    "fields.description.relaxed.name",
-    "fields.description.strict.search",
-    "fields.description.relaxed.search"
+    "fields.description.strict.search"
   ],
   "Title": [
     "fields.title.strict.name",
