--- a/config/basic/type_field_mappings.json
+++ b/config/basic/type_field_mappings.json
@@ -154,6 +154,10 @@
     "fields.description.strict.name",
     "fields.description.strict.search"
   ],
+  "Risk":[
+    "fields.risk.strict.name",
+    "fields.risk.strict.search"
+  ],
   "Service":[
     "fields.service.strict.name",
     "fields.service.relaxed.name",
