Use value instead of name in etk index fields and fix ethnicity typo

--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -5,164 +5,164 @@
     "content_extraction.title.text"
   ],
   "City":[
-    "indexed.city.gurobi.inferlink_description.name",
-    "indexed.city.gurobi.content_strict.name",
-    "indexed.city.gurobi.title.name",
-    "indexed.city.gurobi.other_segment.name",
-    "indexed.city.extract_from_landmark.inferlink_description.name",
-    "indexed.city.extract_from_landmark.content_strict.name",
-    "indexed.city.extract_from_landmark.title.name",
-    "indexed.city.extract_from_landmark.other_segment.name",
-    "indexed.city.other_method.inferlink_description.name",
-    "indexed.city.other_method.content_strict.name",
-    "indexed.city.other_method.title.name",
-    "indexed.city.other_method.other_segment.name",
+    "indexed.city.gurobi.inferlink_description.value",
+    "indexed.city.gurobi.content_strict.value",
+    "indexed.city.gurobi.title.value",
+    "indexed.city.gurobi.other_segment.value",
+    "indexed.city.extract_from_landmark.inferlink_description.value",
+    "indexed.city.extract_from_landmark.content_strict.value",
+    "indexed.city.extract_from_landmark.title.value",
+    "indexed.city.extract_from_landmark.other_segment.value",
+    "indexed.city.other_method.inferlink_description.value",
+    "indexed.city.other_method.content_strict.value",
+    "indexed.city.other_method.title.value",
+    "indexed.city.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "Country":[
-    "indexed.country.gurobi.inferlink_description.name",
-    "indexed.country.gurobi.content_strict.name",
-    "indexed.country.gurobi.title.name",
-    "indexed.country.gurobi.other_segment.name",
-    "indexed.country.extract_from_landmark.inferlink_description.name",
-    "indexed.country.extract_from_landmark.content_strict.name",
-    "indexed.country.extract_from_landmark.title.name",
-    "indexed.country.extract_from_landmark.other_segment.name",
-    "indexed.country.other_method.inferlink_description.name",
-    "indexed.country.other_method.content_strict.name",
-    "indexed.country.other_method.title.name",
-    "indexed.country.other_method.other_segment.name",
+    "indexed.country.gurobi.inferlink_description.value",
+    "indexed.country.gurobi.content_strict.value",
+    "indexed.country.gurobi.title.value",
+    "indexed.country.gurobi.other_segment.value",
+    "indexed.country.extract_from_landmark.inferlink_description.value",
+    "indexed.country.extract_from_landmark.content_strict.value",
+    "indexed.country.extract_from_landmark.title.value",
+    "indexed.country.extract_from_landmark.other_segment.value",
+    "indexed.country.other_method.inferlink_description.value",
+    "indexed.country.other_method.content_strict.value",
+    "indexed.country.other_method.title.value",
+    "indexed.country.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "Age": [
-    "indexed.age.gurobi.inferlink_description.name",
-    "indexed.age.gurobi.content_strict.name",
-    "indexed.age.gurobi.title.name",
-    "indexed.age.gurobi.other_segment.name",
-    "indexed.age.extract_from_landmark.inferlink_description.name",
-    "indexed.age.extract_from_landmark.content_strict.name",
-    "indexed.age.extract_from_landmark.title.name",
-    "indexed.age.extract_from_landmark.other_segment.name",
-    "indexed.age.other_method.inferlink_description.name",
-    "indexed.age.other_method.content_strict.name",
-    "indexed.age.other_method.title.name",
-    "indexed.age.other_method.other_segment.name",
+    "indexed.age.gurobi.inferlink_description.value",
+    "indexed.age.gurobi.content_strict.value",
+    "indexed.age.gurobi.title.value",
+    "indexed.age.gurobi.other_segment.value",
+    "indexed.age.extract_from_landmark.inferlink_description.value",
+    "indexed.age.extract_from_landmark.content_strict.value",
+    "indexed.age.extract_from_landmark.title.value",
+    "indexed.age.extract_from_landmark.other_segment.value",
+    "indexed.age.other_method.inferlink_description.value",
+    "indexed.age.other_method.content_strict.value",
+    "indexed.age.other_method.title.value",
+    "indexed.age.other_method.other_segment.value",
     "content_extraction.title.text"
   ],
   "Email": [
-    "indexed.email.gurobi.inferlink_description.name",
-    "indexed.email.gurobi.content_strict.name",
-    "indexed.email.gurobi.title.name",
-    "indexed.email.gurobi.other_segment.name",
-    "indexed.email.extract_from_landmark.inferlink_description.name",
-    "indexed.email.extract_from_landmark.content_strict.name",
-    "indexed.email.extract_from_landmark.title.name",
-    "indexed.email.extract_from_landmark.other_segment.name",
-    "indexed.email.other_method.inferlink_description.name",
-    "indexed.email.other_method.content_strict.name",
-    "indexed.email.other_method.title.name",
-    "indexed.email.other_method.other_segment.name",
+    "indexed.email.gurobi.inferlink_description.value",
+    "indexed.email.gurobi.content_strict.value",
+    "indexed.email.gurobi.title.value",
+    "indexed.email.gurobi.other_segment.value",
+    "indexed.email.extract_from_landmark.inferlink_description.value",
+    "indexed.email.extract_from_landmark.content_strict.value",
+    "indexed.email.extract_from_landmark.title.value",
+    "indexed.email.extract_from_landmark.other_segment.value",
+    "indexed.email.other_method.inferlink_description.value",
+    "indexed.email.other_method.content_strict.value",
+    "indexed.email.other_method.title.value",
+    "indexed.email.other_method.other_segment.value",
     "content_extraction.title.text"
   ],
   "Ethnicity":[
-    "indexed.ethinicity.gurobi.inferlink_description.name",
-    "indexed.ethinicity.gurobi.content_strict.name",
-    "indexed.ethinicity.gurobi.title.name",
-    "indexed.ethinicity.gurobi.other_segment.name",
-    "indexed.ethinicity.extract_from_landmark.inferlink_description.name",
-    "indexed.ethinicity.extract_from_landmark.content_strict.name",
-    "indexed.ethinicity.extract_from_landmark.title.name",
-    "indexed.ethinicity.extract_from_landmark.other_segment.name",
-    "indexed.ethinicity.other_method.inferlink_description.name",
-    "indexed.ethinicity.other_method.content_strict.name",
-    "indexed.ethinicity.other_method.title.name",
-    "indexed.ethinicity.other_method.other_segment.name",
+    "indexed.ethnicity.gurobi.inferlink_description.value",
+    "indexed.ethnicity.gurobi.content_strict.value",
+    "indexed.ethnicity.gurobi.title.value",
+    "indexed.ethnicity.gurobi.other_segment.value",
+    "indexed.ethnicity.extract_from_landmark.inferlink_description.value",
+    "indexed.ethnicity.extract_from_landmark.content_strict.value",
+    "indexed.ethnicity.extract_from_landmark.title.value",
+    "indexed.ethnicity.extract_from_landmark.other_segment.value",
+    "indexed.ethnicity.other_method.inferlink_description.value",
+    "indexed.ethnicity.other_method.content_strict.value",
+    "indexed.ethnicity.other_method.title.value",
+    "indexed.ethnicity.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "EyeColor":[
-    "indexed.eye_color.gurobi.inferlink_description.name",
-    "indexed.eye_color.gurobi.content_strict.name",
-    "indexed.eye_color.gurobi.title.name",
-    "indexed.eye_color.gurobi.other_segment.name",
-    "indexed.eye_color.extract_from_landmark.inferlink_description.name",
-    "indexed.eye_color.extract_from_landmark.content_strict.name",
-    "indexed.eye_color.extract_from_landmark.title.name",
-    "indexed.eye_color.extract_from_landmark.other_segment.name",
-    "indexed.eye_color.other_method.inferlink_description.name",
-    "indexed.eye_color.other_method.content_strict.name",
-    "indexed.eye_color.other_method.title.name",
-    "indexed.eye_color.other_method.other_segment.name",
+    "indexed.eye_color.gurobi.inferlink_description.value",
+    "indexed.eye_color.gurobi.content_strict.value",
+    "indexed.eye_color.gurobi.title.value",
+    "indexed.eye_color.gurobi.other_segment.value",
+    "indexed.eye_color.extract_from_landmark.inferlink_description.value",
+    "indexed.eye_color.extract_from_landmark.content_strict.value",
+    "indexed.eye_color.extract_from_landmark.title.value",
+    "indexed.eye_color.extract_from_landmark.other_segment.value",
+    "indexed.eye_color.other_method.inferlink_description.value",
+    "indexed.eye_color.other_method.content_strict.value",
+    "indexed.eye_color.other_method.title.value",
+    "indexed.eye_color.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "HairColor":[
-    "indexed.hair_color.gurobi.inferlink_description.name",
-    "indexed.hair_color.gurobi.content_strict.name",
-    "indexed.hair_color.gurobi.title.name",
-    "indexed.hair_color.gurobi.other_segment.name",
-    "indexed.hair_color.extract_from_landmark.inferlink_description.name",
-    "indexed.hair_color.extract_from_landmark.content_strict.name",
-    "indexed.hair_color.extract_from_landmark.title.name",
-    "indexed.hair_color.extract_from_landmark.other_segment.name",
-    "indexed.hair_color.other_method.inferlink_description.name",
-    "indexed.hair_color.other_method.content_strict.name",
-    "indexed.hair_color.other_method.title.name",
-    "indexed.hair_color.other_method.other_segment.name",
+    "indexed.hair_color.gurobi.inferlink_description.value",
+    "indexed.hair_color.gurobi.content_strict.value",
+    "indexed.hair_color.gurobi.title.value",
+    "indexed.hair_color.gurobi.other_segment.value",
+    "indexed.hair_color.extract_from_landmark.inferlink_description.value",
+    "indexed.hair_color.extract_from_landmark.content_strict.value",
+    "indexed.hair_color.extract_from_landmark.title.value",
+    "indexed.hair_color.extract_from_landmark.other_segment.value",
+    "indexed.hair_color.other_method.inferlink_description.value",
+    "indexed.hair_color.other_method.content_strict.value",
+    "indexed.hair_color.other_method.title.value",
+    "indexed.hair_color.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "Height": [
-    "indexed.height.gurobi.inferlink_description.name",
-    "indexed.height.gurobi.content_strict.name",
-    "indexed.height.gurobi.title.name",
-    "indexed.height.gurobi.other_segment.name",
-    "indexed.height.extract_from_landmark.inferlink_description.name",
-    "indexed.height.extract_from_landmark.content_strict.name",
-    "indexed.height.extract_from_landmark.title.name",
-    "indexed.height.extract_from_landmark.other_segment.name",
-    "indexed.height.other_method.inferlink_description.name",
-    "indexed.height.other_method.content_strict.name",
-    "indexed.height.other_method.title.name",
-    "indexed.height.other_method.other_segment.name"
+    "indexed.height.gurobi.inferlink_description.value",
+    "indexed.height.gurobi.content_strict.value",
+    "indexed.height.gurobi.title.value",
+    "indexed.height.gurobi.other_segment.value",
+    "indexed.height.extract_from_landmark.inferlink_description.value",
+    "indexed.height.extract_from_landmark.content_strict.value",
+    "indexed.height.extract_from_landmark.title.value",
+    "indexed.height.extract_from_landmark.other_segment.value",
+    "indexed.height.other_method.inferlink_description.value",
+    "indexed.height.other_method.content_strict.value",
+    "indexed.height.other_method.title.value",
+    "indexed.height.other_method.other_segment.value"
   ],
   "Name": [
-    "indexed.name.gurobi.inferlink_description.name",
-    "indexed.name.gurobi.content_strict.name",
-    "indexed.name.gurobi.title.name",
-    "indexed.name.gurobi.other_segment.name",
-    "indexed.name.extract_from_landmark.inferlink_description.name",
-    "indexed.name.extract_from_landmark.content_strict.name",
-    "indexed.name.extract_from_landmark.title.name",
-    "indexed.name.extract_from_landmark.other_segment.name",
-    "indexed.name.other_method.inferlink_description.name",
-    "indexed.name.other_method.content_strict.name",
-    "indexed.name.other_method.title.name",
-    "indexed.name.other_method.other_segment.name",
+    "indexed.name.gurobi.inferlink_description.value",
+    "indexed.name.gurobi.content_strict.value",
+    "indexed.name.gurobi.title.value",
+    "indexed.name.gurobi.other_segment.value",
+    "indexed.name.extract_from_landmark.inferlink_description.value",
+    "indexed.name.extract_from_landmark.content_strict.value",
+    "indexed.name.extract_from_landmark.title.value",
+    "indexed.name.extract_from_landmark.other_segment.value",
+    "indexed.name.other_method.inferlink_description.value",
+    "indexed.name.other_method.content_strict.value",
+    "indexed.name.other_method.title.value",
+    "indexed.name.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "Phone": [
-    "indexed.phone.gurobi.inferlink_description.name",
-    "indexed.phone.gurobi.content_strict.name",
-    "indexed.phone.gurobi.title.name",
-    "indexed.phone.gurobi.other_segment.name",
-    "indexed.phone.extract_from_landmark.inferlink_description.name",
-    "indexed.phone.extract_from_landmark.content_strict.name",
-    "indexed.phone.extract_from_landmark.title.name",
-    "indexed.phone.extract_from_landmark.other_segment.name",
-    "indexed.phone.other_method.inferlink_description.name",
-    "indexed.phone.other_method.content_strict.name",
-    "indexed.phone.other_method.title.name",
-    "indexed.phone.other_method.other_segment.name",
+    "indexed.phone.gurobi.inferlink_description.value",
+    "indexed.phone.gurobi.content_strict.value",
+    "indexed.phone.gurobi.title.value",
+    "indexed.phone.gurobi.other_segment.value",
+    "indexed.phone.extract_from_landmark.inferlink_description.value",
+    "indexed.phone.extract_from_landmark.content_strict.value",
+    "indexed.phone.extract_from_landmark.title.value",
+    "indexed.phone.extract_from_landmark.other_segment.value",
+    "indexed.phone.other_method.inferlink_description.value",
+    "indexed.phone.other_method.content_strict.value",
+    "indexed.phone.other_method.title.value",
+    "indexed.phone.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
@@ -182,49 +182,49 @@
     "indexed.posting_date.other_method.other_segment.key"
   ],
   "Price": [
-    "indexed.price.gurobi.inferlink_description.name",
-    "indexed.price.gurobi.content_strict.name",
-    "indexed.price.gurobi.title.name",
-    "indexed.price.gurobi.other_segment.name",
-    "indexed.price.extract_from_landmark.inferlink_description.name",
-    "indexed.price.extract_from_landmark.content_strict.name",
-    "indexed.price.extract_from_landmark.title.name",
-    "indexed.price.extract_from_landmark.other_segment.name",
-    "indexed.price.other_method.inferlink_description.name",
-    "indexed.price.other_method.content_strict.name",
-    "indexed.price.other_method.title.name",
-    "indexed.price.other_method.other_segment.name"
+    "indexed.price.gurobi.inferlink_description.value",
+    "indexed.price.gurobi.content_strict.value",
+    "indexed.price.gurobi.title.value",
+    "indexed.price.gurobi.other_segment.value",
+    "indexed.price.extract_from_landmark.inferlink_description.value",
+    "indexed.price.extract_from_landmark.content_strict.value",
+    "indexed.price.extract_from_landmark.title.value",
+    "indexed.price.extract_from_landmark.other_segment.value",
+    "indexed.price.other_method.inferlink_description.value",
+    "indexed.price.other_method.content_strict.value",
+    "indexed.price.other_method.title.value",
+    "indexed.price.other_method.other_segment.value"
   ],
   "Service": [
-    "indexed.service.gurobi.inferlink_description.name",
-    "indexed.service.gurobi.content_strict.name",
-    "indexed.service.gurobi.title.name",
-    "indexed.service.gurobi.other_segment.name",
-    "indexed.service.extract_from_landmark.inferlink_description.name",
-    "indexed.service.extract_from_landmark.content_strict.name",
-    "indexed.service.extract_from_landmark.title.name",
-    "indexed.service.extract_from_landmark.other_segment.name",
-    "indexed.service.other_method.inferlink_description.name",
-    "indexed.service.other_method.content_strict.name",
-    "indexed.service.other_method.title.name",
-    "indexed.service.other_method.other_segment.name",
+    "indexed.service.gurobi.inferlink_description.value",
+    "indexed.service.gurobi.content_strict.value",
+    "indexed.service.gurobi.title.value",
+    "indexed.service.gurobi.other_segment.value",
+    "indexed.service.extract_from_landmark.inferlink_description.value",
+    "indexed.service.extract_from_landmark.content_strict.value",
+    "indexed.service.extract_from_landmark.title.value",
+    "indexed.service.extract_from_landmark.other_segment.value",
+    "indexed.service.other_method.inferlink_description.value",
+    "indexed.service.other_method.content_strict.value",
+    "indexed.service.other_method.title.value",
+    "indexed.service.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
   "Weight": [
-    "indexed.weight.gurobi.inferlink_description.name",
-    "indexed.weight.gurobi.content_strict.name",
-    "indexed.weight.gurobi.title.name",
-    "indexed.weight.gurobi.other_segment.name",
-    "indexed.weight.extract_from_landmark.inferlink_description.name",
-    "indexed.weight.extract_from_landmark.content_strict.name",
-    "indexed.weight.extract_from_landmark.title.name",
-    "indexed.weight.extract_from_landmark.other_segment.name",
-    "indexed.weight.other_method.inferlink_description.name",
-    "indexed.weight.other_method.content_strict.name",
-    "indexed.weight.other_method.title.name",
-    "indexed.weight.other_method.other_segment.name"
+    "indexed.weight.gurobi.inferlink_description.value",
+    "indexed.weight.gurobi.content_strict.value",
+    "indexed.weight.gurobi.title.value",
+    "indexed.weight.gurobi.other_segment.value",
+    "indexed.weight.extract_from_landmark.inferlink_description.value",
+    "indexed.weight.extract_from_landmark.content_strict.value",
+    "indexed.weight.extract_from_landmark.title.value",
+    "indexed.weight.extract_from_landmark.other_segment.value",
+    "indexed.weight.other_method.inferlink_description.value",
+    "indexed.weight.other_method.content_strict.value",
+    "indexed.weight.other_method.title.value",
+    "indexed.weight.other_method.other_segment.value"
   ],
   "TopLevelDomain": [
     "tld.raw",
