--- a/default_kg_mapping.json
+++ b/default_kg_mapping.json
@@ -66,6 +66,26 @@
                   "enabled": false
                 }
               }
+            },
+            "url" : {
+              "properties" : {
+                "data_extraction": {
+                  "enabled":false
+                },
+                "simple_tokens" : {
+                  "type" : "string",
+                  "index" : "no"
+                },
+                "spacy_extraction" : {
+                  "enabled": false
+                },
+                "text" : {
+                  "type" : "string"
+                },
+                "tokens" : {
+                  "enabled": false
+                }
+              }
             }
           }
         },
@@ -75,6 +95,12 @@
         "doc_id": {
           "type": "string",
           "index": "not_analyzed"
+        },
+        "extracted_metadata": {
+          "enabled": false
+        },
+        "extractions": {
+          "enabled": false
         },
         "knowledge_graph":{
             "enabled": false
