Add type field mappings for group by aggregations

--- a/config/etk/config.json
+++ b/config/etk/config.json
@@ -55,6 +55,11 @@
           "type_field_mappings": "config/etk/type_field_mappings.json"
         },
         {
+          "type": "TypeFieldMapping",
+          "name": "TypeFieldGroupByMapping",
+          "type_field_mappings": "config/etk/type_field_group_by_mappings.json"
+        },
+        {
           "zone_field_mappings": "config/etk/zone_field_mappings.json",
           "type": "ZoneFieldMapping",
           "name": "ZoneFieldMapping"
