--- a/config/etk/type_field_group_by_mappings.json
+++ b/config/etk/type_field_group_by_mappings.json
@@ -3,46 +3,46 @@
     "content_extraction.content_strict.text"
   ],
   "City":[
-    "indexed.city.other_method.content_strict.key"
+    "indexed.city.high_confidence_keys"
   ],
   "Country":[
-    "indexed.country.other_method.content_strict.key"
+    "indexed.country.high_confidence_keys"
   ],
   "Age": [
-    "indexed.age.extract_from_landmark.content_strict.key"
+    "indexed.age.high_confidence_keys"
   ],
   "Email": [
-    "indexed.email.other_method.content_strict.key"
+    "indexed.email.high_confidence_keys"
   ],
   "Ethnicity":[
-    "indexed.ethnicity.other_method.content_strict.key"
+    "indexed.ethnicity.high_confidence_keys"
   ],
   "EyeColor":[
-    "indexed.eye_color.other_method.content_strict.key"
+    "indexed.eye_color.high_confidence_keys"
   ],
   "HairColor":[
-    "indexed.hair_color.other_method.content_strict.key"
+    "indexed.hair_color.high_confidence_keys"
   ],
   "Height": [
-    "indexed.height.other_method.content_strict.key"
+    "indexed.height.high_confidence_keys"
   ],
   "Name": [
-    "indexed.name.other_method.content_strict.key"
+    "indexed.name.high_confidence_keys"
   ],
   "Phone": [
-    "indexed.phone.other_method.content_strict.key"
+    "indexed.phone.high_confidence_keys"
   ],
   "PostingDate": [
-    "indexed.posting_date.other_method.content_strict.key"
+    "indexed.posting_date.high_confidence_keys"
   ],
   "Price": [
-    "indexed.price.other_method.content_strict.key"
+    "indexed.price.high_confidence_keys"
   ],
   "Service": [
-    "indexed.service.other_method.content_strict.key"
+    "indexed.service.high_confidence_keys"
   ],
   "Weight": [
-    "indexed.weight.other_method.content_strict.key"
+    "indexed.weight.high_confidence_keys"
   ],
   "TopLevelDomain": [
     "tld.raw"
