Add predicate range and type to field mappings for Location predicate

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -7,6 +7,7 @@
   "eye_color": "EyeColor",
   "hair_color": "HairColor",
   "height": "Height",
+  "location": "Location",
   "name": "Name",
   "phone": "Phone",
   "posting_date": "PostingDate",
