--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -133,6 +133,35 @@
     "indexed.height.other_method.title.value",
     "indexed.height.other_method.other_segment.value"
   ],
+  "Location": [
+    "indexed.city.gurobi.inferlink_description.value",
+    "indexed.city.gurobi.content_strict.value",
+    "indexed.city.gurobi.title.value",
+    "indexed.city.gurobi.other_segment.value",
+    "indexed.city.extract_from_landmark.inferlink_description.value",
+    "indexed.city.extract_from_landmark.content_strict.value",
+    "indexed.city.extract_from_landmark.title.value",
+    "indexed.city.extract_from_landmark.other_segment.value",
+    "indexed.city.other_method.inferlink_description.value",
+    "indexed.city.other_method.content_strict.value",
+    "indexed.city.other_method.title.value",
+    "indexed.city.other_method.other_segment.value",
+    "indexed.country.gurobi.inferlink_description.value",
+    "indexed.country.gurobi.content_strict.value",
+    "indexed.country.gurobi.title.value",
+    "indexed.country.gurobi.other_segment.value",
+    "indexed.country.extract_from_landmark.inferlink_description.value",
+    "indexed.country.extract_from_landmark.content_strict.value",
+    "indexed.country.extract_from_landmark.title.value",
+    "indexed.country.extract_from_landmark.other_segment.value",
+    "indexed.country.other_method.inferlink_description.value",
+    "indexed.country.other_method.content_strict.value",
+    "indexed.country.other_method.title.value",
+    "indexed.country.other_method.other_segment.value",
+    "content_extraction.content_relaxed.text",
+    "content_extraction.content_strict.text",
+    "content_extraction.title.text"
+  ],
   "Name": [
     "indexed.name.gurobi.inferlink_description.value",
     "indexed.name.gurobi.content_strict.value",
