Add state predicate and mappings

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -13,6 +13,7 @@
   "posting_date": "PostingDate",
   "price": "Price",
   "service": "Service", 
+  "state": "State",
   "weight": "Weight",
   "tld": "TopLevelDomain",
   "url": "URL"
