--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -158,6 +158,18 @@
     "indexed.country.other_method.content_strict.value",
     "indexed.country.other_method.title.value",
     "indexed.country.other_method.other_segment.value",
+    "indexed.state.gurobi.inferlink_description.value",
+    "indexed.state.gurobi.content_strict.value",
+    "indexed.state.gurobi.title.value",
+    "indexed.state.gurobi.other_segment.value",
+    "indexed.state.extract_from_landmark.inferlink_description.value",
+    "indexed.state.extract_from_landmark.content_strict.value",
+    "indexed.state.extract_from_landmark.title.value",
+    "indexed.state.extract_from_landmark.other_segment.value",
+    "indexed.state.other_method.inferlink_description.value",
+    "indexed.state.other_method.content_strict.value",
+    "indexed.state.other_method.title.value",
+    "indexed.state.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
@@ -237,6 +249,23 @@
     "indexed.service.other_method.content_strict.value",
     "indexed.service.other_method.title.value",
     "indexed.service.other_method.other_segment.value",
+    "content_extraction.content_relaxed.text",
+    "content_extraction.content_strict.text",
+    "content_extraction.title.text"
+  ],
+  "State": [
+    "indexed.state.gurobi.inferlink_description.value",
+    "indexed.state.gurobi.content_strict.value",
+    "indexed.state.gurobi.title.value",
+    "indexed.state.gurobi.other_segment.value",
+    "indexed.state.extract_from_landmark.inferlink_description.value",
+    "indexed.state.extract_from_landmark.content_strict.value",
+    "indexed.state.extract_from_landmark.title.value",
+    "indexed.state.extract_from_landmark.other_segment.value",
+    "indexed.state.other_method.inferlink_description.value",
+    "indexed.state.other_method.content_strict.value",
+    "indexed.state.other_method.title.value",
+    "indexed.state.other_method.other_segment.value",
     "content_extraction.content_relaxed.text",
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
