--- a/config/etk/zone_field_mappings.json
+++ b/config/etk/zone_field_mappings.json
@@ -166,6 +166,18 @@
     "indexed.service.other_method.content_strict.value",
     "indexed.service.other_method.title.value",
     "indexed.service.other_method.other_segment.value",
+    "indexed.state.gurobi.inferlink_description.value",
+    "indexed.state.gurobi.content_strict.value",
+    "indexed.state.gurobi.title.value",
+    "indexed.state.gurobi.other_segment.value",
+    "indexed.state.extract_from_landmark.inferlink_description.value",
+    "indexed.state.extract_from_landmark.content_strict.value",
+    "indexed.state.extract_from_landmark.title.value",
+    "indexed.state.extract_from_landmark.other_segment.value",
+    "indexed.state.other_method.inferlink_description.value",
+    "indexed.state.other_method.content_strict.value",
+    "indexed.state.other_method.title.value",
+    "indexed.state.other_method.other_segment.value",
     "indexed.weight.gurobi.inferlink_description.value",
     "indexed.weight.gurobi.content_strict.value",
     "indexed.weight.gurobi.title.value",
