Add title predicate and mapping to etc config

--- a/config/etk/type_field_mappings.json
+++ b/config/etk/type_field_mappings.json
@@ -270,6 +270,11 @@
     "content_extraction.content_strict.text",
     "content_extraction.title.text"
   ],
+  "Title": [    
+    "content_extraction.content_relaxed.text",
+    "content_extraction.content_strict.text",
+    "content_extraction.title.text"
+  ],
   "Weight": [
     "indexed.weight.gurobi.inferlink_description.value",
     "indexed.weight.gurobi.content_strict.value",
