--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -14,6 +14,7 @@
   "price": "Price",
   "service": "Service", 
   "state": "State",
+  "title": "Title",
   "weight": "Weight",
   "tld": "TopLevelDomain",
   "url": "URL"
