--- a/config/etk/config.json
+++ b/config/etk/config.json
@@ -17,6 +17,10 @@
           "type": "ConstraintExpansion",
           "name": "DictConstraintExpander",
           "dict_constraint_mappings": "config/etk/dict_constraint_mappings.json"
+        },
+        {
+            "type": "ConstraintRelaxation",
+            "name": "IsOptionalConstraintRelaxer"
         }
       ]
     },
